# writeme

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.temp.md  README.tpl.md  TEMPLATE.md  config.json  release.sh  release.tpl.sh
.github/ISSUE_TEMPLATE/: 🐞-bug.md  🚀-feature.md  🤝-help.md
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
assets/: Cargo.toml  Cargo.tpl.toml  composer.json  docker-compose.yml  package-lock.json  package.json  package_1.json
assets/test/: composer.json  package-lock.json  package.json
assets/tpl/: AUTHOR.md  BODY.md  FOOTER.md  HEADER.md  SHIELD.md  SUPPORT.md  TEMPLATE.md
conf/: configs.yml  licenses.yml  techs.yml
conf/lic/: MIT.md
conf/tpl/: BODY.md  CONTRIB_ROCKS.md  FOOTER.md  HEADER.md  LICENSE.md  TABLE_OF_CONTENT.md  TEMPLATE.md
conf/tpl/readme/: BODY.md  CONTRIB_ROCKS.md  FOOTER.md  HEADER.md  LICENSE.md  SUPPORT.md  TABLE_OF_CONTENT.md
src/: configs.yml  main.rs  tech_conf.json  techs.json  techs.yml
src/assembler/: contributing_assembler.rs  mod.rs  readme_assembler.rs
src/converter/: cargo_toml.rs  composer_json.rs  mod.rs  package_json.rs
src/converter/parsers/: cargo_toml.rs  composer_json.rs  package_json.rs
src/converter/parts/: license.rs
src/converter/parts/license/: mod.rs
src/dialoguer/: mod.rs
src/elements/: funding.rs  license.rs  mod.rs  repository.rs
src/merger/: mod.rs
src/scanner/: mod.rs  scanner.rs
src/tpl/: FOOTER.md  HEADER.md  SHIELD.md  TABLE_OF_CONTENT.md
src/utils/: mod.rs
tpl/: BODY.md  FOOTER.md
