[package]
name = "writeme"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.6"
rand = "0.8.5"
serde_json = { version = "1.0.95", features = ["indexmap", "raw_value"] }
serde_yaml = "0.9.21"
terminal-spinners = "0.3.2"
toml = "0.7.3"

[badges]
maintenance = { status = "enable" }
