[package]
name = "writeme"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
colored = "2.0.0"
derive = "1.0.0"
dialoguer = "0.10.4"
glob = "0.3.1"
handlebars = "4.3.6"
itertools = "0.10.5"
log-update = "0.1.0"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["indexmap", "raw_value"] }
serde_yaml = "0.9.21"
terminal-spinners = "0.3.2"
toml = "0.7.3"

[badges]
maintenance = { status = "enable" }
