[package]
name = "writeme"
version = "0.2.0"
edition = "2021"
authors = ["Leonardo Straccali", "Luca Corsetti"]
license = "GPL-3.0-only"
description = "Cross-platform README generator for your project"
readme = "README.md"
homepage = "https://github.com/writeme-project/writeme"
repository = "https://github.com/writeme-project/writeme"
keywords = ["readme", "generator", "cross-platform", "cli", "markdown"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "writeme"
path = "src/main.rs"
include = ["conf/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.26"
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
derive = "1.0.0"
dialoguer = "0.10.4"
enum-assoc = "1.1.0"
git2 = { version = "0.17.1", features = ["vendored-openssl"] }
handlebars = "4.3.6"
itertools = "0.10.5"
log-update = "0.1.0"
rand = "0.8.5"
regex = "1.7.3"
rust_search = "2.1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["indexmap", "raw_value"] }
serde_yaml = "0.9.21"
strum = { version = "0.24.1", features = ["derive"] }
terminal-spinners = "0.3.2"
toml = "0.7.3"

[badges]
maintenance = { status = "enable" }
